Docs improvements part 2
